# inpanel

./: .gitignore  CHANGELOG.md  LICENSE  LICENSE-v1.0 b10  LICENSE.txt  MANIFEST.in  README-zh.md  README.md  README_EN.md  TODOLIST.md  aaa.com.conf  apache.py  build.sh  config.py  inpanel.spec  install.py  install_repo.sh  pyproject.toml  requirements.txt  rpmbuild.spec  server.py  vhost-reader.py
.github/workflows/: build.yml
api/: latest  site_packages  sitepackage_list
core/: __init__.py  acme.py  aliyuncs.py  apache.py  app.py  base.py  certificate.py  config.py  configloader.py  configuration.py  cron.py  files.py  mod_apache.py  mod_config.py  mod_cron.py  mod_file.py  mod_httpd.py  mod_lighttpd.py  mod_mysql.py  mod_named.py  mod_nginx.py  mod_php.py  mod_process.py  mod_proftpd.py  mod_pureftpd.py  mod_sc.py  mod_service.py  mod_shell.py  mod_ssh.py  mod_user.py  mod_vsftpd.py  mod_web.py  mod_yum.py  nginx.py  php.py  proc.py  remote.py  sc.py  server.py  service.py  (+6 more)
core/certificate/: inpanel.crt
core/lib/: __init__.py  async_process.py  filelock.py  pxssh.py
core/mod/: apt.py  certificate.py  config.py  dnf.py  file.py  firewall.py  httpd.py  mysql.py  nginx.py  package_dnf.py  package_map.py  php.py  process.py  server.py  service.py  setting.py  task.py  user.py  vsftpd.py  yum.py
core/modules/: __init__.py  acme.py  aliyuncs.py  apache.py  apt.py  certificate.py  config.py  configloader.py  configuration.py  cron.py  fdisk.py  files.py  firewalld.py  ftp.py  lighttpd.py  mysql.py  named.py  nginx.py  php.py  process.py  proftpd.py  pureftpd.py  remote.py  repo_yum.py  sc.py  server.py  service.py  shell.py  ssh.py  task.py  ufw.py  user.py  vsftpd.py  yum.py
data/: config.ini  local_cron.ini  remote_server.ini  remote_storage.ini  tmp.ini
data/module/: cron.ini  httpd.ini  nginx.ini  php.ini  ssh.ini  yum.ini
debian/: changelog  control  postinst  postrm  prerm  rules
docs/: 后台任务管理.md
inpanel/: __init__.py  acme.py  aliyuncs.py  app.py  apt.py  base.py  config.py  dnf.py  plugin.py  remote.py  utils.py  web.py  yum.py
inpanel/data/: config.ini
internal/: config.py  configuration.py  fdisk.py  files.py  mod_process.py  mysql.py  php.py  proftpd.py  ssh.py  user.py
lib/: __init__.py  acme.py  async_process.py  distro.py  filelock.py  pexpect.py  pxssh.py  pyDes.py
module/: __init__.py  acme.py  aliyuncs.py  apache.py  certificate.py  configloader.py  cron.py  ecs.py  lighttpd.py  named.py  proc.py  proftpd.py  pureftpd.py  remote.py  sc.py  server.py  shell.py  ssltls.py  utils.py  vsftpd.py
modules/: __init__.py  acme.py  aliyuncs.py  apache.py  certificate.py  config.py  configloader.py  cron.py  fdisk.py  files.py  lighttpd.py  mfile.py  mysql.py  named.py  nginx.py  php.py  process.py  pureftpd.py  remote.py  sc.py  server.py  service.py  shell.py  ssh.py  user.py  utils.py  vsftpd.py  web.py  yum.py
plugins/: __init__.py
public/: index.html
scripts/: build_package.sh  build_repo.sh  init_repo.sh  install.sh
site/: changelog.html  features.html  index.html  install.html  manual.html
src/: __init__.py  aliyuncs.py  app.py  base.py  certificate.py  config.py  configloader.py  configuration.py  fdisk.py  files.py  mod_process.py  mod_web.py  mysql.py  nginx.py  process.py  remote.py  sc.py  server.py  service.py  shell.py  ssh.py  user.py  utils.py  web.py  yum.py
static/: index.html
templates/: index.html
test/: a.py  a.sh  aaa.com.conf  aaa.ini  apache.py  b.py  vhost-reader.py
tools/: __init__.py
(+405 files in other folders)
